--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,11 @@
         <script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js" charset="utf-8"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollama/1.4.4/scrollama.min.js" integrity="sha256-1NHjvSjKf8OP+R7cPyIewcfSj2GoMuiKkZechn/9y0Y=" crossorigin="anonymous"></script>
         <script src="{{ '/assets/js/scroll.js' | relative_url }}" charset="utf-8"></script>
+
     {% endif %}
     <script src="{{ '/assets/js/main.js' | relative_url }}" charset="utf-8"></script>
     <script src="{{ '/assets/js/custom-scripts.js' | relative_url }}" charset="utf-8"></script>
+    <script src="{{ '/assets/js/vis01.js' | relative_url }}" charset="utf-8"></script>
 </body>
 
 </html>
