--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
     <script src="{{ '/assets/js/main.js' | relative_url }}" charset="utf-8"></script>
     <script src="{{ '/assets/js/custom-scripts.js' | relative_url }}" charset="utf-8"></script>
     <script src="{{ '/assets/js/vis01.js' | relative_url }}" charset="utf-8"></script>
+    <script src="{{ '/assets/js/vis02.js' | relative_url }}" charset="utf-8"></script>
 </body>
 
 </html>
