--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
     <script src="{{ '/assets/js/custom-scripts.js' | relative_url }}" charset="utf-8"></script>
     <script src="{{ '/assets/js/vis01.js' | relative_url }}" charset="utf-8"></script>
     <script src="{{ '/assets/js/vis02.js' | relative_url }}" charset="utf-8"></script>
+    <script src="{{ '/assets/js/vis04.js' | relative_url }}" charset="utf-8"></script>
 </body>
 
 </html>
