--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,7 +1,7 @@
 html {
-    --color-main: #e4007c;
+    --color-main: #3d3d3d;
     --color-dark: #0c0a01;
-    --color-light: #fbfef9;
+    --color-light: #FF3366;
     --font-display: 'Archivo Black', sans-serif;
     --font-text: 'Chivo', sans-serif;
 }
