--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
 html {
-    --color-main: #3d3d3d;
+    --color-main: #0066ff;
     --color-dark: #0c0a01;
     --color-light: #FF3366;
     --font-display: 'Archivo Black', sans-serif;
