--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -4,8 +4,8 @@ footer {
     grid-template-rows: 3fr 3fr 2fr;
     margin: 0;
     padding: 3rem calc((100% - var(--container-width)) / 2);
-    background-color: var(--color-main);
-    color: var(--color-light);
+    background-color: #0066ff;
+    color: white;
 }
 
 .footer__image {
