--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
         <script src="{{ '/assets/js/vis01.js' | relative_url }}" charset="utf-8"></script>
         <script src="{{ '/assets/js/vis02.js' | relative_url }}" charset="utf-8"></script>
         <script src="{{ '/assets/js/vis04.js' | relative_url }}" charset="utf-8"></script>
+        <script src="{{ '/assets/js/vis05.js' | relative_url }}" charset="utf-8"></script>
         <script src="{{ '/assets/js/echarts.js' | relative_url }}" charset="utf-8"></script>
         <script src="{{ '/assets/js/echarts.min.js' | relative_url }}" charset="utf-8"></script>
     {% endif %}
